# Arcade

./: .gitignore  CMakeLists.txt
Content/: Config.json
Content/Shaders/: Additive.frag  Downsample.frag  Monitor.frag
Engine/: Config.json
Engine/Include/Animation/: SpriteSheets.h
Engine/Include/Core/: Engine.h  EngineConfig.h  EngineVisitor.h  InputBindings.h  Managers.h  Overlay.h  WindowController.h
Engine/Include/Graphics/: PostProcess.h
Engine/Include/Graphics/Effects/: Bloom.h  CRT.h  Glitch.h  Invert.h
Engine/Include/Scenes/: Scene.h  SceneFactory.h  SceneUtilities.h
Engine/Include/SystemManagers/: AssetManager.h  AudioManager.h  ClipboardManager.h  CursorManager.h  GUIManager.h  InputEventManager.h  InputManager.h  RandomManager.h  RenderManager.h  SaveManager.h  SceneManager.h  ScreenshotManager.h  TimeManager.h
Engine/Include/Utilities/: Assert.h  Icon.rc  Log.h  Timer.h
Engine/Source/: main.cpp
Engine/Source/Animation/: SpriteSheets.cpp
Engine/Source/Core/: Engine.cpp  EngineConfig.cpp  EngineVisitor.cpp  InputBindings.cpp  Overlay.cpp  WindowController.cpp
Engine/Source/Graphics/Effects/: Bloom.cpp  CRT.cpp  Glitch.cpp  Invert.cpp
Engine/Source/Scenes/: SceneFactory.cpp
Engine/Source/SystemManagers/: AssetManager.cpp  AudioManager.cpp  ClipboardManager.cpp  CursorManager.cpp  GUIManager.cpp  InputManager.cpp  RandomManager.cpp  RenderManager.cpp  SaveManager.cpp  SceneManager.cpp  ScreenshotManager.cpp  TimeManager.cpp
Engine/Source/Utilities/: Timer.cpp
Games/Include/: Bounce.h  Clicker.h  MainMenu.h  Runner.h  Tetris.h
Games/Include/Config/: BounceConfig.h  ClickerConfig.h  MainMenuConfig.h  RunnerConfig.h  TetrisConfig.h
Games/Include/Types/: BounceTypes.h  ClickerTypes.h  MainMenuTypes.h  RunnerTypes.h  TetrisTypes.h
Games/Source/: Bounce.cpp  Clicker.cpp  MainMenu.cpp  Runner.cpp  Tetris.cpp
